--- a/tagsinput.css
+++ b/tagsinput.css
@@ -53,18 +53,11 @@
 
 .bootstrap-tagsinput .badge [data-role="remove"]:after {
   content: "×";
-  padding: 0px 4px;
-  background-color:rgba(0, 0, 0, 0.1);
-  border-radius:50%;
-  font-size:13px
+  font-size:13px;
 }
 
 .bootstrap-tagsinput .badge [data-role="remove"]:hover:after {
-  background-color:rgba(0, 0, 0, 0.62);
-}
-
-.bootstrap-tagsinput .badge [data-role="remove"]:hover:active {
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  color: red;
 }
 
 .tt-menu {
